cmake_minimum_required(VERSION 3.23)
project(C_Primer_Plus_Source_Code)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)


add_executable(express.cpp express.cpp)
add_executable(textin1.cpp textin1.cpp)
add_executable(textin2.cpp textin2.cpp)
add_executable(textin3.cpp textin3.cpp)
add_executable(textin4.cpp textin4.cpp)
add_executable(compstr1.cpp compstr1.cpp)
add_executable(compstr2.cpp compstr2.cpp)
add_executable(forloop.cpp forloop.cpp)
add_executable(formore.cpp formore.cpp)
add_executable(forstr1.cpp forstr1.cpp)
add_executable(forstr2.cpp forstr2.cpp)